--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,3 +17,24 @@ main {
     box-shadow: 3px 5px 6px rgba(0, 0, 0, 0.473);
 
 }
+
+h1 {
+    font-size: 2em;
+    color: rgb(58, 0, 112);
+}   
+
+h2 {
+    font-size: 1.5em;
+    color: rgb(58, 0, 112);
+}
+
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(58, 0, 112);
+}
+
+a:hover {
+    color: rgb(26, 26, 255);
+    text-decoration: underline;
+}
