--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,31 +1,33 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    
 }
 
 body {
-    background-color: #1900ff;
+    background-color: #acacff;
 
 }
 
 main {
-    background-color: #ffffff;
-    width: 500px;
+    background-color: white;
+    width: 560px;
     margin: auto;
-    padding: 20px;
-    box-shadow: 3px 5px 6px rgba(0, 0, 0, 0.473);
-
+    padding: 10px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
 }
 
 h1 {
     font-size: 2em;
     color: rgb(58, 0, 112);
-}   
+}
 
 h2 {
     font-size: 1.5em;
     color: rgb(58, 0, 112);
+}
+
+img.lado {
+    float: right;
 }
 
 a {
@@ -35,6 +37,6 @@ a {
 }
 
 a:hover {
-    color: rgb(26, 26, 255);
     text-decoration: underline;
+    color: rgb(26, 26, 255);
 }
